--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -7,7 +7,7 @@
             <h2 class="mt-3"><%=listing.title%></h2>
             <p>Owned by: <i><%=listing.owner.username%></i></p>
             <p><%=listing.description%></p>
-            <p><b>&#8377; <%=listing.price.toLocaleString("en-In")%> </b>/day</p>
+            <p><b>&#8377; <%=listing.price.toLocaleString("en-In")%> </b>/night</p>
             <p>Location: <%=listing.location%></p>
             <p class="mb-5">Country: <%=listing.country%></p>
         </div>
